--- a/views/products/_product.handlebars
+++ b/views/products/_product.handlebars
@@ -1,5 +1,5 @@
 <div class="col-sm-4">
-  <div class="card">
+  <div class="card my-3">
     <a href="/products/{{ product.id }}">
       <img class="card-img-top gallery-image" src="http://i.imgur.com/qK42fUu.jpg">
     </a>
