--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -2,7 +2,7 @@
   <div class="row">
     {{#each products as |product| }}
     <div class="col-sm-offset-4 col-sm-8">
-      <div id="product{{product.id}}" class="card">
+      <div id="product{{product.id}}" class="card my-3">
         <a href="/products/{{ product.id }}">
           <img class="card-img-top gallery-image" src="http://i.imgur.com/qK42fUu.jpg">
         </a>
