--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -1,61 +1,86 @@
-<header class="page-header">
- <h1>Product</h1>
-</header>
 
-<div class="row">
-  <div class="col-xs-3">
-      <img src="/images/{{currentProduct.photo}}" height="180" width="180">
-  </div>
-  <div class="col-xs-3">
-      <p>{{currentProduct.name}}</p>
-      <p>{{currentProduct.Category.name}}</p>
-      <p>${{currentProduct.price}}</p>
-  </div>
-  <div class="col-xs-6">
-      <p>{{currentProduct.description}}</p>
-      {{#if (isInCart currentProduct.id cartProducts)}}
-        <form action="/cart" method="GET">
-        <button type="submit" class="btn btn-success">Edit Cart</button>
-        </form>
-      {{else}}
-        <form action="/addToCart" method="POST">
-          <input type="hidden" name="productId" value="{{currentProduct.id}}">
-          <button type="submit" class="btn btn-primary">Add to Cart</button>
-        </form>
-      {{/if}}
+<!-- Page Content -->
+<div class="container">
+
+  <div class="row">
+
+    <div class="col-md-8 col-md-offset-2">
+
+     <div class="thumbnail show">
+        <img class="img-responsive" src="/images/{{currentProduct.photo}}" alt="">
+        <br>
+        <div class="caption-full">
+          <h4 class="pull-right">${{currentProduct.price}}</h4>
+          <h4><a href="#">{{currentProduct.name}}</a>
+          </h4>
+          <h6>{{currentProduct.Category.name}}</h6>
+          <p>{{currentProduct.description}}</p>
+        </div>
+        <div class="ratings text-center">
+          {{#if (isInCart currentProduct.id cartProducts)}}
+          <p>
+            <a href="/cart" class="btn btn-success" style="width:150px">Edit Cart</a>
+          </p>
+          {{else}}
+          <p>
+            <form action="/addToCart" method="POST">
+              <input type="hidden" name="productId" value="{{currentProduct.id}}">
+              <button type="submit" class="btn btn-primary">Add to Cart</button>
+            </form>
+          </p>
+          {{/if}}
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row text-center">
+        <!-- Title -->
+      <div class="row">
+        <div class="col-lg-12">
+            <h3>Related Products</h3>
+        </div>
+      </div>
+      <br>
+    <!-- /.row -->
+    {{#each products as |product|}}
+      <div class="col-md-3 col-sm-6 hero-feature">
+        <div class="thumbnail">
+          <img src="/images/{{product.photo}}" alt="">
+          <div class="caption">
+            <h3><a href="/products/{{product.id}}">{{product.name}}</a></h3>
+            <h5>${{product.price}}</h5>
+            <p>{{../currentProduct.Category.name}}</p>
+            {{#if (isInCart product.id ../cartProducts)}}
+            <p>
+              <a href="/cart" class="btn btn-success">Edit Cart</a>
+            </p>
+            {{else}}
+            <p>
+              <form action="/addToCart" method="POST">
+                <input type="hidden" name="productId" value="{{product.id}}">
+                <button type="submit" class="btn btn-primary">Add to Cart</button>
+              </form>
+            </p>
+            {{/if}}
+          </div>
+        </div>
+      </div>
+    {{/each}}
+    </div>
+
   </div>
 
-</div>
+<hr>
 
-<div class="row">
-  <div class="col-xs-12 text-center">
-    <h2>Related Products:</h2>
-  </div>
-</div>
-<div class="clearfix"></div>
-<div class="row">
- {{#each products as |product|}}
-    <div class="col-xs-4 index-img">
-      <img src="/images/{{product.photo}}" height="180" width="180" /><br>
-      <div class="text-center">
-        {{#if (isInCart product.id ../cartProducts)}}
-        <form action="/cart" method="GET">
-          <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
-          <p>${{product.price}}</p>
-          <p>{{../currentProduct.Category.name}}</p>
-          <button type="submit" class="btn btn-success">Edit Cart</button>
-        </form>
-        {{else}}
-        <form action="/addToCart" method="POST">
-          <input type="hidden" name="productId" value="{{product.id}}">
-          <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
-          <p>${{product.price}}</p>
-          <p>{{../currentProduct.Category.name}}</p>
-          <button type="submit" class="btn btn-primary">Add to Cart</button>
-        </form>
-        {{/if}}
+<!-- Footer -->
+  <footer>
+    <div class="row">
+      <div class="col-lg-12">
+          <p>Copyright &copy; Mimir's Market 2017</p>
       </div>
     </div>
-  {{/each}}
+  </footer>
+
 </div>
-<div class="clearfix"></div>
+<!-- /.container -->
