--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -1,42 +1,83 @@
-<header class="page-header">
- <h1>Cart</h1>
 
-</header>
+<!-- Page Content -->
+<div class="container">
 
-{{#each cartProducts as |product|}}
-<div class="row">
-  <div class="col-xs-3">
-      <img src="/images/{{product.photo}}" height="180" width="180">
-  </div>
-  <div class="col-xs-3">
-      <p>{{product.name}}</p>
-      <p>{{product.Category.name}}</p>
-      <p>{{product.price}}</p>
-  </div>
-  <div class="col-xs-3">
-      <form action="/cart/updateQuantity" method="POST">
-        <input type="hidden" name="productId" value="{{product.id}}">
-        <input type="text" name="productQuantity" value="{{product.quantity}}">
-  </div>
-  <div class="col-xs-3">
-    <button type="submit" class="btn btn-success">Set Quantity</button>
-    </form>
-    <form action="/cart/remove" method="POST">
-      <input type="hidden" name="productId" value="{{product.id}}">
-      <button type="submit" class="btn btn-danger">Remove</button>
-  </div>
-    </form>
+  <!-- Jumbotron Header -->
+  <header class="jumbotron hero-spacer">
+    <h2>Your Shopping Cart</h2>
+  </header>
+
+  <hr>
+
+  <table id="cart" class="table table-hover table-condensed">
+    <thead>
+    <tr>
+      <th style="width:50%">Product</th>
+      <th style="width:10%">Price</th>
+      <th style="width:8%">Quantity</th>
+      <th style="width:22%" class="text-center">Subtotal</th>
+      <th style="width:10%"></th>
+    </tr>
+    </thead>
+    <tbody>
+      {{#each cartProducts as |product|}}
+      <tr>
+        <td data-th="Product">
+          <div class="row">
+            <div class="col-sm-2 hidden-xs"><img src="/images/{{product.photo}}" alt="..." class="img-responsive"/></div>
+            <div class="col-sm-10">
+              <a href="/products/{{product.id}}"><h4 class="nomargin">{{product.name}}</h4></a>
+              <p>{{product.Category.name}}</p>
+            </div>
+          </div>
+        </td>
+        <td data-th="Price">${{product.price}}</td>
+        <td data-th="Quantity">
+          <form action="/cart/updateQuantity" method="POST">
+          <input type="number" class="form-control text-center" name="productQuantity" value="{{product.quantity}}">
+        </td>
+        <td data-th="Subtotal" class="text-center">CALC!!!</td>
+        <td class="actions" data-th="">
+          <input type="hidden" name="productId" value="{{product.id}}">
+          <button class="btn btn-info btn-sm"><i class="fa fa-refresh"></i></button>
+        </form>
+        <form action="/cart/remove" method="POST">
+          <input type="hidden" name="productId" value="{{product.id}}">
+          <button class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></button>
+        </form>
+        </td>
+      </tr>
+      {{/each}}
+    </tbody>
+    <tfoot>
+      <tr class="visible-xs">
+        <td class="text-center"><strong>Total {{total}}.00</strong></td>
+      </tr>
+      <tr>
+        <td><a href="/" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
+        <td colspan="2" class="hidden-xs"></td>
+        <td class="hidden-xs text-center"><strong>Total: $ {{total}}.00</strong></td>
+        <td><br><form action="/checkout" method="POST">
+          <button type="submit" class="btn btn-primary">CheckOut</button>
+        </form><br>
+        <form action="/cart/clear" method="POST">
+          <button type="submit" class="btn btn-danger">Clear Cart</button>
+        </form></td>
+      </tr>
+    </tfoot>
+  </table>
+
+  <hr>
+
+  <!-- Footer -->
+  <footer>
+    <div class="row">
+      <div class="col-lg-12">
+          <p>Copyright &copy; Mimir's Market 2017</p>
+      </div>
+    </div>
+  </footer>
+
 </div>
-{{/each}}
+<!-- /.container -->
 
-<div>
-  <h3>Total: $ {{total}}.00</h3>
-</div>
-
-<form action="/cart/clear" method="POST">
-  <button type="submit" class="btn btn-danger">Clear Cart</button>
-</form>
-
-<form action="/checkout" method="POST">
-  <button type="submit" class="btn btn-primary">CheckOut</button>
-</form>
