--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -1,40 +1,29 @@
-<header class="page-header">
- <h1>Products</h1>
-</header>
 
-<div class="row">
-<div class="col-xs-8 col-xs-offset-2">
-  <form action="/search" method="GET">
-    <div class="input-group">
-      <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary">Search</button>
-      </span>
-      <input type="text" name="searchText" class="form-control" id="search_text" placeholder="Search">
-    </div>
-  </form>
-<br>
-  <form action="/filter" method="GET">
-    <div class="input-group">
-      <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary"> Filter </button>
-      </span>
-      <input type="number" name="minPrice" class="form-control" id="min_price" placeholder="Minimum Price"><br>
-      <input type="number" name="maxPrice" class="form-control" id="max_price" placeholder="Maximum Price"><br>
-      <select name="product[categoryId]" id="category" class="form-control">
-        <option value="">Choose Category: </option>
-        {{#each categories as |category| }}
-        <option value="{{ category.id }}">{{ category.name }}</option>
-        {{/each }}
-      </select>
-    </div>
-  </form>
-<br>
-  <form action="/order" method="GET">
-    <div class="input-group">
-      <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary">Order</button>
-      </span>
-      <select name="orderBy" id="sort_by" class="form-control">
+
+<!-- Page Content -->
+<div class="container">
+
+  <!-- Jumbotron Header -->
+  <header class="jumbotron hero-spacer">
+    <form class="form-inline text-center" action="/search" method="GET">
+      <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" style="width: 50%;" id="search_text" placeholder="Search" name="searchText">
+      <button type="submit" class="btn btn-primary">Search</button>
+    </form>
+    <br>
+    <form class="form-inline text-center" action="/filter" method="GET">
+      <input type="number" name="minPrice" class="form-control mb-2 mr-sm-2 mb-sm-0" id="min_price" placeholder="Minimum Price">
+      <input type="number" name="maxPrice" class="form-control mb-2 mr-sm-2 mb-sm-0" id="max_price" placeholder="Maximum Price">
+      <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="product[categoryId]" id="category">
+          <option selected value="">Choose Category: </option>
+          {{#each categories as |category| }}
+          <option value="{{ category.id }}">{{ category.name }}</option>
+          {{/each }}
+        </select>
+      <button type="submit" class="btn btn-primary">Filter</button>
+    </form>
+    <br>
+    <form class="form-inline text-center" action="/order" method="GET">
+      <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="orderBy" id="sort_by" style="width: 50%">
         <option value="">Order By:</option>
         <option value="&quot;name&quot;">By name ascending</option>
         <option value="&quot;name&quot; DESC">By name descending</option>
@@ -42,46 +31,61 @@
         <option value="&quot;price&quot; DESC">By price ascending</option>
         <option value="&quot;createdAt&quot;">Oldest first</option>
         <option value="&quot;createdAt&quot; DESC">Newest first</option>
-      </select><br>
+      </select>
+      <button type="submit" class="btn btn-primary">Order</button>
+    </form>
+  </header>
+
+  <hr>
+
+  <!-- Title -->
+  <div class="row">
+    <div class="col-lg-12">
+      <h3 class="text-center">Products</h3>
     </div>
-  </form>
-</div>
-</div>
-
-<div class="row">
-  <div class="col-xs-12 text-center">
-    <h2>Products:</h2>
-    {{#if hasSearched}}
-    <h2>Results from search: {{search}}<h2>
-    {{/if}}
-    {{#if hasFiltered}}
-    <h2>Results from filtering (min price: {{minPrice}}, max price: {{maxPrice}}, category: {{categoryId}})<h2>
-    {{/if}}
   </div>
-</div>
+  <!-- /.row -->
+  <br>
+  <!-- Page Features -->
+  <div class="row text-center">
 
-<div class="row product-container">
- {{#each products as |product|}}
-    <div class="col-xs-4 index-img">
-      <img src="/images/{{product.photo}}" height="180" width="180" />
-      <div class="text-center">
-        {{#if (isInCart product.id ../cartProducts)}}
-        <form action="/cart" method="GET">
-          <h4><a href="/products/{{product.id}}">{{product.name}}</a></h4>
+    {{#each products as |product|}}
+    <div class="col-md-3 col-sm-6 hero-feature">
+      <div class="thumbnail">
+        <img src="/images/{{product.photo}}" alt="">
+        <div class="caption">
+          <h3><a href="/products/{{product.id}}">{{product.name}}</a></h3>
           <h5>${{product.price}}</h5>
-          <h5>{{product.Category.name}}</h5>
-          <button type="submit" class="btn btn-success">Edit Cart</button>
-        </form>
-        {{else}}
-        <form action="/addToCart" method="POST">
-          <input type="hidden" name="productId" value="{{product.id}}">
-          <h4><a href="/products/{{product.id}}">{{product.name}}</a></h4>
-          <h5>${{product.price}}</h5>
-          <h5>{{product.Category.name}}</h5>
-          <button type="submit" class="btn btn-primary">Add to Cart</button>
-        </form>
-        {{/if}}
+          <p>{{product.Category.name}}</p>
+          {{#if (isInCart product.id ../cartProducts)}}
+          <p>
+            <a href="/cart" class="btn btn-success">Edit Cart</a>
+          </p>
+          {{else}}
+          <p>
+          <form action="/addToCart" method="POST">
+            <input type="hidden" name="productId" value="{{product.id}}">
+            <button type="submit" class="btn btn-primary">Add to Cart</button>
+          </form>
+        </p>
+          {{/if}}
+        </div>
       </div>
     </div>
-  {{/each}}
+    {{/each}}
+  </div>
+  <!-- /.row -->
+
+  <hr>
+
+  <!-- Footer -->
+  <footer>
+      <div class="row">
+          <div class="col-lg-12">
+              <p>Copyright &copy; Mimir's Market 2017</p>
+          </div>
+      </div>
+  </footer>
+
 </div>
+<!-- /.container -->
