--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -1,37 +1,39 @@
+<!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Mimir's Market</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="/">Search</a>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shopping Cart<span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        {{#each cartProducts as |product|}}
+                        <li>({{product.quantity}}) : {{product.name}}</li>
+                        {{/each}}
+                        <li><a href="/cart">Shopping Cart</a></li>
+                        <li><a href="#">Checkout</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                        <a href="#">Analytics</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav-collapse" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/">Mimir's Market</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="main-nav-collapse">
-
-      <ul class="nav navbar-nav navbar-right">
-         <li>
-          <a href="#">Search</a>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shopping Cart<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            {{#each cartProducts as |product|}}
-            <li>{{product.quantity}} : {{product.name}}</li>
-            {{/each}}
-            <li><a href="/cart">Shopping Cart</a></li>
-            <li><a href="#">Checkout</a></li>
-          </ul>
-        </li>
-
-      </ul>
-
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
