--- a/views/products/_product.handlebars
+++ b/views/products/_product.handlebars
@@ -1,7 +1,7 @@
 <div class="col-sm-4">
   <div class="card my-3">
     <a href="/products/{{ product.id }}">
-      <img class="card-img-top gallery-image" src="http://i.imgur.com/qK42fUu.jpg">
+      <img class="card-img-top gallery-image" src="{{product.img}}">
     </a>
     <div class="card-block">
       <div class="float-right">
