--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -57,7 +57,7 @@
         <td><a href="/" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
         <td colspan="2" class="hidden-xs"></td>
         <td class="hidden-xs text-center"><strong>Total: $ {{total}}.00</strong></td>
-        <td><br><form action="/checkout" method="POST">
+        <td><br><form action="/cart/checkout" method="GET">
           <button type="submit" class="btn btn-primary">CheckOut</button>
         </form><br>
         <form action="/cart/clear" method="POST">
