--- a/views/cart/checkout.handlebars
+++ b/views/cart/checkout.handlebars
@@ -2,14 +2,6 @@
             <div class="row cart-head">
                 <div class="container">
                 <div class="row">
-                    <p></p>
-                </div>
-                <div class="row">
-                    <div style="display: table; margin: auto;">
-                        <span class="step step_complete"> <a href="#" class="check-bc">Cart</a> <span class="step_line step_complete"> </span> <span class="step_line backline"> </span> </span>
-                        <span class="step step_complete"> <a href="#" class="check-bc">Checkout</a> <span class="step_line "> </span> <span class="step_line step_complete"> </span> </span>
-                        <span class="step_thankyou check-bc step_complete">Thank you</span>
-                    </div>
                 </div>
                 <div class="row">
                     <p></p>
@@ -49,8 +41,19 @@
                                     <div class="pull-right"><span>$</span><span>{{total}}</span></div>
                                 </div>
                             </div>
+
                         </div>
-                    </div>
+                        <form action="/charges" method="post">
+                        </div>
+                        <script
+                          src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                          data-key="{{ STRIPE_PK }}"
+                          data-amount=
+                          data-name="Stripe Node Test"
+                          data-description="Widget"
+                          data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+                          data-locale="auto"></script>
+                      </form>
                     <!--REVIEW ORDER END-->
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
@@ -63,12 +66,7 @@
                                     <h4>Shipping Address</h4>
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <div class="col-md-12"><strong>Country:</strong></div>
-                                <div class="col-md-12">
-                                    <input type="text" class="form-control" name="country" value="" />
-                                </div>
-                            </div>
+
                             <div class="form-group">
                                 <div class="col-md-6 col-xs-12">
                                     <strong>First Name:</strong>
@@ -81,9 +79,9 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="col-md-12"><strong>Address:</strong></div>
+                                <div class="col-md-12"><strong>Street:</strong></div>
                                 <div class="col-md-12">
-                                    <input type="text" name="address" class="form-control" value="" />
+                                    <input type="text" name="street" class="form-control" value="" />
                                 </div>
                             </div>
                             <div class="form-group">
@@ -95,18 +93,61 @@
                             <div class="form-group">
                                 <div class="col-md-12"><strong>State:</strong></div>
                                 <div class="col-md-12">
-                                    <input type="text" name="state" class="form-control" value="" />
+                                  <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="state" id="state" style="width:100%">
+                                    <option value="">Click to open dropdown</option>
+                                    <option value="AL">Alabama</option>
+                                  	<option value="AK">Alaska</option>
+                                  	<option value="AZ">Arizona</option>
+                                  	<option value="AR">Arkansas</option>
+                                  	<option value="CA">California</option>
+                                  	<option value="CO">Colorado</option>
+                                  	<option value="CT">Connecticut</option>
+                                  	<option value="DE">Delaware</option>
+                                  	<option value="DC">District Of Columbia</option>
+                                  	<option value="FL">Florida</option>
+                                  	<option value="GA">Georgia</option>
+                                  	<option value="HI">Hawaii</option>
+                                  	<option value="ID">Idaho</option>
+                                  	<option value="IL">Illinois</option>
+                                  	<option value="IN">Indiana</option>
+                                  	<option value="IA">Iowa</option>
+                                  	<option value="KS">Kansas</option>
+                                  	<option value="KY">Kentucky</option>
+                                  	<option value="LA">Louisiana</option>
+                                  	<option value="ME">Maine</option>
+                                  	<option value="MD">Maryland</option>
+                                  	<option value="MA">Massachusetts</option>
+                                  	<option value="MI">Michigan</option>
+                                  	<option value="MN">Minnesota</option>
+                                  	<option value="MS">Mississippi</option>
+                                  	<option value="MO">Missouri</option>
+                                  	<option value="MT">Montana</option>
+                                  	<option value="NE">Nebraska</option>
+                                  	<option value="NV">Nevada</option>
+                                  	<option value="NH">New Hampshire</option>
+                                  	<option value="NJ">New Jersey</option>
+                                  	<option value="NM">New Mexico</option>
+                                  	<option value="NY">New York</option>
+                                  	<option value="NC">North Carolina</option>
+                                  	<option value="ND">North Dakota</option>
+                                  	<option value="OH">Ohio</option>
+                                  	<option value="OK">Oklahoma</option>
+                                  	<option value="OR">Oregon</option>
+                                  	<option value="PA">Pennsylvania</option>
+                                  	<option value="RI">Rhode Island</option>
+                                  	<option value="SC">South Carolina</option>
+                                  	<option value="SD">South Dakota</option>
+                                  	<option value="TN">Tennessee</option>
+                                  	<option value="TX">Texas</option>
+                                  	<option value="UT">Utah</option>
+                                  	<option value="VT">Vermont</option>
+                                  	<option value="VA">Virginia</option>
+                                  	<option value="WA">Washington</option>
+                                  	<option value="WV">West Virginia</option>
+                                  	<option value="WI">Wisconsin</option>
+                                  	<option value="WY">Wyoming</option>
+                                  </select>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-12"><strong>Zip / Postal Code:</strong></div>
-                                <div class="col-md-12">
-                                    <input type="text" name="zip_code" class="form-control" value="" />
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-12"><strong>Phone Number:</strong></div>
-                                <div class="col-md-12"><input type="text" name="phone_number" class="form-control" value="" /></div>
                             </div>
                             <div class="form-group">
                                 <div class="col-md-12"><strong>Email Address:</strong></div>
@@ -114,108 +155,10 @@
                             </div>
                         </div>
                     </div>
-                    <!--SHIPPING METHOD END-->
-                    <!--CREDIT CART PAYMENT-->
-                    <div class="panel panel-info">
-                        <div class="panel-heading"><span><i class="glyphicon glyphicon-lock"></i></span> Secure Payment</div>
-                        <div class="panel-body">
-                            <div class="form-group">
-                                <div class="col-md-12"><strong>Card Type:</strong></div>
-                                <div class="col-md-12">
-                                    <select id="CreditCardType" name="CreditCardType" class="form-control">
-                                        <option value="5">Visa</option>
-                                        <option value="6">MasterCard</option>
-                                        <option value="7">American Express</option>
-                                        <option value="8">Discover</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-12"><strong>Credit Card Number:</strong></div>
-                                <div class="col-md-12"><input type="text" class="form-control" name="car_number" value="" /></div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-12"><strong>Card CVV:</strong></div>
-                                <div class="col-md-12"><input type="text" class="form-control" name="car_code" value="" /></div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-12">
-                                    <strong>Expiration Date</strong>
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <select class="form-control" name="">
-                                        <option value="">Month</option>
-                                        <option value="01">01</option>
-                                        <option value="02">02</option>
-                                        <option value="03">03</option>
-                                        <option value="04">04</option>
-                                        <option value="05">05</option>
-                                        <option value="06">06</option>
-                                        <option value="07">07</option>
-                                        <option value="08">08</option>
-                                        <option value="09">09</option>
-                                        <option value="10">10</option>
-                                        <option value="11">11</option>
-                                        <option value="12">12</option>
-                                </select>
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <select class="form-control" name="">
-                                        <option value="">Year</option>
-                                        <option value="2015">2015</option>
-                                        <option value="2016">2016</option>
-                                        <option value="2017">2017</option>
-                                        <option value="2018">2018</option>
-                                        <option value="2019">2019</option>
-                                        <option value="2020">2020</option>
-                                        <option value="2021">2021</option>
-                                        <option value="2022">2022</option>
-                                        <option value="2023">2023</option>
-                                        <option value="2024">2024</option>
-                                        <option value="2025">2025</option>
-                                </select>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-12">
-                                    <span>Pay secure using your credit card.</span>
-                                </div>
-                                <div class="col-md-12">
-                                    <ul class="cards">
-                                        <li class="visa hand">Visa</li>
-                                        <li class="mastercard hand">MasterCard</li>
-                                        <li class="amex hand">Amex</li>
-                                    </ul>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <button type="submit" class="btn btn-primary btn-submit-fix">Place Order</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--CREDIT CART PAYMENT END-->
+
                 </div>
-                
-                </form>
-            </div>
-            <div class="row cart-footer">
-        
-            </div>
+              </form>
+          </div>
+        <div class="row cart-footer">
+      </div>
     </div>
-
-
-
-
-<form action="/charges" method="post">
-  <script
-    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="{{ STRIPE_PK }}"
-    data-amount="100"
-    data-name="Stripe Node Test"
-    data-description="Widget"
-    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
-    data-locale="auto"></script>
-</form>
