--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -1,5 +1,5 @@
 <div class="card mb-3">
-  <img class="card-img-top main-image" src="http://i.imgur.com/qK42fUu.jpg">
+  <img class="card-img-top main-image" src="{{ product.img }}">
   <div class="card-block">
     <p class="card-text float-right">{{ currency product.price }}</p>
     <h4 class="card-title">{{ product.name }}</h4>
