Complete payment route

--- a/views/cart/checkout.handlebars
+++ b/views/cart/checkout.handlebars
@@ -45,7 +45,7 @@
                         </div>
                         </div>
 
-                        <form >
+                        <!-- <form > -->
                           <input type="hidden" value="{{total}}" name="amount">
                         <script
                           src="https://checkout.stripe.com/checkout.js" class="stripe-button"
@@ -55,7 +55,7 @@
                           data-description="Widget"
                           data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
                           data-locale="auto"></script>
-                      </form>
+                      <!-- </form> -->
 
                     <!--REVIEW ORDER END-->
                 </div>
@@ -151,10 +151,6 @@
                                   	<option value="WY">Wyoming</option>
                                   </select>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-12"><strong>Email Address:</strong></div>
-                                <div class="col-md-12"><input type="text" name="email_address" class="form-control" value="" /></div>
                             </div>
                         </div>
                     </div>
