fixed mongoose model

--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -24,7 +24,7 @@
                         <li>({{product.quantity}}) : {{product.name}}</li>
                         {{/each}}
                         <li><a href="/cart">Shopping Cart</a></li>
-                        <li><a href="#">Checkout</a></li>
+                        <li><a href="/cart/checkout">Checkout</a></li>
                       </ul>
                     </li>
                     <li>
