--- a/views/cart/checkout.handlebars
+++ b/views/cart/checkout.handlebars
@@ -73,31 +73,30 @@
                             <div class="form-group">
                                 <div class="col-md-6 col-xs-12">
                                     <strong>First Name:</strong>
-                                    <input type="text" name="first_name" class="form-control" value="" />
+                                    <input required type="text" name="first_name" class="form-control" value="" />
                                 </div>
                                 <div class="span1"></div>
                                 <div class="col-md-6 col-xs-12">
                                     <strong>Last Name:</strong>
-                                    <input type="text" name="last_name" class="form-control" value="" />
+                                    <input required type="text" name="last_name" class="form-control" value="" />
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="col-md-12"><strong>Street:</strong></div>
                                 <div class="col-md-12">
-                                    <input type="text" name="street" class="form-control" value="" />
+                                    <input required type="text" name="street" class="form-control" value="" />
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="col-md-12"><strong>City:</strong></div>
                                 <div class="col-md-12">
-                                    <input type="text" name="city" class="form-control" value="" />
+                                    <input required type="text" name="city" class="form-control" value="" />
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="col-md-12"><strong>State:</strong></div>
                                 <div class="col-md-12">
                                   <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="state" id="state" style="width:100%">
-                                    <option value="">Click to open dropdown</option>
                                     <option value="AL">Alabama</option>
                                   	<option value="AK">Alaska</option>
                                   	<option value="AZ">Arizona</option>
