Create admin index, start admin show

--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -28,7 +28,7 @@
                       </ul>
                     </li>
                     <li>
-                        <a href="#">Analytics</a>
+                        <a href="/admin">Analytics</a>
                     </li>
                 </ul>
             </div>
@@ -36,4 +36,3 @@
         </div>
         <!-- /.container -->
     </nav>
-
