--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -14,7 +14,8 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img class="nav-image" src="/cart.svg"><span class="ml-1">({{ cartQuantity }})</span>
+            <img class="nav-image" src="/cart.svg">
+            <span class="ml-1">({{ cartQuantity }})</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="/cart">View Cart</a>
@@ -28,7 +29,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/checkouts">
             <img class="nav-image" src="/checkout.svg">
           </a>
         </li>
