--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 
 body {
-  padding-top: 100px;
+  padding: 100px 0 50px 0;
 }
 
 nav {
@@ -34,4 +34,40 @@ nav {
 .nav-image {
   width: 40px;
   height: 40px;
+}
+
+.checkout-item {
+  position: relative;
+  border: 1px solid #ddd;
+  height: 140px;
+  border-radius: 5px;
+  padding: 20px 20px;
+}
+
+.checkout-image {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  height: 100px;
+  object-fit: cover;
+}
+
+.inline {
+  display: inline-block;
+}
+
+.checkout-desc {
+  font-size: 14px;
+  display: inline-block;
+  margin-left: 166px;
+}
+
+#total {
+  display: inline-block;
+  margin-left: 186px;
+  font-weight: 800;
+}
+
+.bigger {
+  font-size: 1.5rem;
 }
