--- a/views/checkouts/new.handlebars
+++ b/views/checkouts/new.handlebars
@@ -118,7 +118,14 @@
 
         <div class="mt-3">
           <div class="form-group float-right">
-            <input type="submit" value="Submit Payment" class="btn btn-success">
+            <script
+              src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+              data-key="{{ STRIPE_PK }}"
+              data-amount="100"
+              data-name="Stripe Node Test"
+              data-description="Widget"
+              data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+              data-locale="auto"></script>
           </div>
 
           <p class="card-text">
@@ -129,6 +136,8 @@
       </form>
     </div>
   </div>
+
+
 
 {{else }}
   <p class="text-danger">No products</p>
