Start on analytics queries

--- a/views/admin/show.handlebars
+++ b/views/admin/show.handlebars
@@ -133,8 +133,8 @@
 
               <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
                 <!-- STUFF on the LEFT -->
-  
-                {{#each cartProducts as |product| }}
+
+                {{#each adminProducts as |product| }}
                   <table class="table">
                     <thead>
                       <tr>
@@ -200,7 +200,7 @@
 
                     </div>
 
-              
+
 
         <div class="row cart-footer">
       </div>
