--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -28,7 +28,10 @@
                       </ul>
                     </li>
                     <li>
-                        <a href="/admin">Analytics</a>
+                        <a href="/analytics">Analytics</a>
+                    </li>
+                    <li>
+                        <a href="/admin">Admin</a>
                     </li>
                 </ul>
             </div>
