--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -24,7 +24,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/analytics">
             <img class="nav-image" src="/analytics.svg">
           </a>
         </li>
