pixabay broke and i need it

--- a/views/analytics/index.handlebars
+++ b/views/analytics/index.handlebars
@@ -31,10 +31,10 @@
           </ul>
         </td>
         <td>
-          {{ order.createdAt }}</a>
+          {{ order.createdAt }}
         </td>
         <td>
-          {{ order.total }}</a>
+          {{ order.total }}
         </td>
         <td>
           <a href="/users/{{ order.Profile.id }}">{{ order.Profile.Location.distance }}</a>
