update products index styling

--- a/views/analytics/index.handlebars
+++ b/views/analytics/index.handlebars
@@ -1,7 +1,6 @@
 <header class="page-header">
-  <h1>Admin Orders Index</h1>
+  <h1 class="text-center mb-5">Admin Orders</h1>
 </header>
-
 
 {{#if orders.length }}
   <table class="table">
