--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -50,7 +50,7 @@
   </div>
   <p class="card-text">
     <form action="cart/removeAll" method="post">
-      <button type="submit" class="btn btn-danger">Destroy Everything</button>
+      <button type="submit" class="btn btn-danger">Remove All</button>
     </form>
   </p>
 {{else }}
