--- a/views/shared/_cartButton.handlebars
+++ b/views/shared/_cartButton.handlebars
@@ -3,6 +3,6 @@
 {{else}}
   <form action="/cart" method="post">
     <input type="hidden" name="id" value="{{ product.id }}">
-    <button type="submit" class="btn btn-primary">+ Cart</button>
+    <button type="submit" class="btn btn-primary btn-thin"><i class="fa fa-shopping-cart" aria-hidden="true"></i> +</button>
   </form>
 {{/if}}
