--- a/public/style.css
+++ b/public/style.css
@@ -17,14 +17,35 @@ nav {
   width: 100%;
 }
 
+.card-deck .card {
+  margin: 15px 10px;
+}
+
 .card-title {
   font-size: 20px;
+}
+
+.card-block {
+  padding: 10px 10px;
+}
+
+.product-description {
+  color: #666;
+  font-size: 14px;
+}
+
+.card-footer {
+  padding: 10px 10px;
 }
 
 .gallery-image {
   object-fit: cover;
   height: 200px;
   width: 100%;
+}
+
+.btn-thin {
+  padding: 8px 15px;
 }
 
 .navbar-nav {
@@ -70,4 +91,18 @@ nav {
 
 .bigger {
   font-size: 1.5rem;
+}
+
+.product-image-container {
+  position: relative;
+}
+
+.product-price {
+  background-color: #333;
+  letter-spacing: 1px;
+  color: white;
+  padding: 5px 7px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
