--- a/views/products/_product.handlebars
+++ b/views/products/_product.handlebars
@@ -1,27 +1,27 @@
-<div class="col-sm-4">
-  <div class="card my-3">
-    <a href="/products/{{ product.id }}">
-      <img class="card-img-top gallery-image" src="{{product.img}}">
-    </a>
-    <div class="card-block">
-      <div class="float-right">
-        {{currency product.price}}
-      </div>
-      <h4 class="card-title">
-        <a href="/products/{{ product.id }}">
-          {{product.name}}
-        </a>
-      </h4>
-      <p class="card-text">
-        in
-        <a href="/categories/{{ product.Category.id }}">
-          {{product.Category.name}}
-        </a>
-      </p>
-      <p class="card-text">
-        {{product.description}}
-      </p>
-      {{> shared/_cartButton cartIds=cartIds productId=product.id}}
+<div class="card">
+    <div class="product-image-container">
+      <a href="/products/{{ product.id }}">
+        <img class="card-img-top gallery-image" src="{{product.img}}">
+      </a>
+      <div class="product-price">{{currency product.price}}</div>
     </div>
+  <div class="card-block">
+    <h4 class="card-title">
+      <a href="/products/{{ product.id }}">
+        {{product.name}}
+      </a>
+    </h4>
+    <p class="card-text">
+      in
+      <a href="/categories/{{ product.Category.id }}">
+        {{product.Category.name}}
+      </a>
+    </p>
+    <p class="card-text product-description">
+      {{product.description}}
+    </p>
+  </div>
+  <div class="card-footer">
+    {{> shared/_cartButton cartIds=cartIds productId=product.id}}
   </div>
 </div>
