--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -3,14 +3,14 @@
     {{#each products as |product| }}
     <div class="col-sm-offset-4 col-sm-8">
       <div id="product{{product.id}}" class="card my-3">
-        <a href="/products/{{ product.id }}">
-          <img class="card-img-top gallery-image" src="{{product.img}}">
-        </a>
+        <div class="product-image-container">
+          <a href="/products/{{ product.id }}">
+            <img class="card-img-top gallery-image" src="{{product.img}}">
+          </a>
+          <div class="product-price">{{currency product.price}}</div>
+        </div>
         <div class="card-block">
-          <div class="float-right">
-            {{currency product.price}}
-          </div>
-          <h4 class="card-title">
+          <h4 class="card-title mt-2">
             <a href="/products/{{ product.id }}">
               {{product.name}}
             </a>
@@ -22,10 +22,10 @@
             </a>
           </p>
           <p class="card-text">
-            <form action="cart/edit" method="post">
-              <label>Quantity</label>
+            <form class="form-inline" action="cart/edit" method="post">
+              <label class="mr-sm-2" for="quantity">Quantity</label>
               <input type="hidden" name="id" value="{{product.id}}">
-              <input type="number" name="quantity" min="0" value="{{product.quantity}}">
+              <input type="number" id="quantity" class="form-control mr-2" name="quantity" min="0" value="{{product.quantity}}">
               <button type="submit" class="btn btn-primary">Set Quantity</button>
             </form>
           </p>
